# ICP_project_v3

./: .gitignore  CMakeLists.txt  Doxyfile.txt  ICP_project_v3.pro  ICP_project_v3.vcxproj  ICP_project_v3.vcxproj.filters  ICP_projekt_v3.sln  ICP_projekt_v3.vcxproj  ICP_projekt_v3.vcxproj.filters  Makefile  README.md  README.txt  hit1.re  main.cpp  mainpage.md  one.re  uhh.re  what.re
examples/: example1.re  example2.re  example3.re  example4.re  example5.re
rayTracer/: AxisObject.cpp  AxisObject.h  Detector.cpp  Detector.h  Detektor.cpp  Lens.cpp  Lens.h  MicroscopeAxis.cpp  MicroscopeAxis.h  Point.h  Ray.cpp  Ray.h  RayEngine.cpp  RayEngine.h  RayPath.cpp  RayPath.h  RayTracer.cpp  RayTracer.h  Sample.cpp  Sample.h  main-r.cpp  main.cpp
src/: renderObjects.h
src/common/: macros.h
src/gui/: MainGui.cpp  MainGui.h  main-gui.cpp  renderObjects.cpp  renderObjects.h
src/gui/Classes3D/: Base3D.cpp  Base3D.h  Detector3D.cpp  Detector3D.h  GuiLens.cpp  GuiLens.h  Lens.cpp  Lens.h  Lens3D.cpp  Lens3D.h  Line.cpp  Line.h  Line3D.cpp  Line3D.h  Ray3D.cpp  Ray3D.h  RayCluster3D.cpp  RayCluster3D.h  Sample3D.cpp  Sample3D.h  Source3D.cpp  Source3D.h
src/gui/ClassesGui/: GuiWindow.cpp  GuiWindow.h  LensEditor.cpp  LensEditor.h  LensList.cpp  LensList.h  LensListItem.cpp  LensListItem.h  LensSelector.cpp  LensSelector.h  LensSelectorItem.cpp  LensSelectorItem.h  MiscEditor.cpp  MiscEditor.h  SceneViewer.cpp  SceneViewer.h  (+4 more)
src/rayTracer/: AxisObject.h  Detector.cpp  Detector.h  Lens.cpp  Lens.h  Point.h  Ray.h  RayEngine.cpp  RayEngine.h  Sample.cpp  Sample.h
(+5 files in other folders)
